created error message in html and css

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,12 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+        <div class="isa_error">
+            <i class="fa fa-times-circle"></i>
+            Incorect input.
+         </div>
         <section class="new-tweet">
+            
             <h2>Compose Tweet</h2>
             <form id="create-new-tweet" action="/tweets" method="POST">
               <textarea name="text" placeholder="What are you humming about?"></textarea>
