--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <main class="container">
         <div class="isa_error">
             <i class="fa fa-times-circle"></i>
-            Incorect input.
+            Incorrect input.
          </div>
         <section class="new-tweet">
             
