fixed tweet avatar image

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
       </div>
       <br>
       <div>
-          <h2>Julia Paulasaari</h2>
+          <h2>
+            <span id="first-name"><strong>Julia</strong>Paulasaari</span>
+          </h2>
       </div>
   </header>
 
